--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1027,6 +1027,9 @@ oauth2client==4.0.0
 # homeassistant.components.profiler
 objgraph==3.4.1
 
+# homeassistant.components.octopus_energy
+octopus-energy==0.1.9
+
 # homeassistant.components.oem
 oemthermostat==1.1.1
 
