--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -510,6 +510,9 @@ oauth2client==4.0.0
 # homeassistant.components.profiler
 objgraph==3.4.1
 
+# homeassistant.components.octopus_energy
+octopus-energy==0.1.9
+
 # homeassistant.components.omnilogic
 omnilogic==0.4.2
 
